--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'com.jakewharton:butterknife-compiler:8.4.0'
     compile 'com.arello-mobile:moxy:1.1.1'
     compile 'com.arello-mobile:moxy-compiler:1.1.1'
     compile 'com.arello-mobile:moxy-app-compat:1.1.1'
